fix homepage image on mobile

--- a/portfolio_homepage/small.css
+++ b/portfolio_homepage/small.css
@@ -55,7 +55,7 @@ body {
 }
 
 
-#image {
+.image {
     position:absolute;
     opacity:0;
     width:2px;
